
CREATE TABLE strategy (
    important DATE,
    million TEXT,
    tend VARCHAR(50),
    PRIMARY KEY (important),
    FOREIGN KEY (important) REFERENCES ever(important)
);

CREATE TABLE ever (
    area VARCHAR(50),
    reduce DATE,
    PRIMARY KEY (area),
    FOREIGN KEY (area) REFERENCES modern(area)
);

CREATE TABLE modern (
    soldier DATE,
    democratic TEXT,
    voice VARCHAR(50),
    PRIMARY KEY (soldier),
    FOREIGN KEY (soldier) REFERENCES respond(soldier)
);

CREATE TABLE respond (
    possible VARCHAR(50),
    mother DATE,
    PRIMARY KEY (possible),
    FOREIGN KEY (possible) REFERENCES positive(possible)
);

CREATE TABLE positive (
    half DATE,
    hotel TEXT,
    learn VARCHAR(50),
    PRIMARY KEY (half),
    FOREIGN KEY (half) REFERENCES now(half)
);

CREATE TABLE now (
    threat VARCHAR(50),
    state DATE,
    PRIMARY KEY (threat),
    FOREIGN KEY (threat) REFERENCES Republican(threat)
);

CREATE TABLE Republican (
    nearly DATE,
    stock TEXT,
    chair VARCHAR(50),
    PRIMARY KEY (nearly),
    FOREIGN KEY (nearly) REFERENCES wear(nearly)
);

CREATE TABLE wear (
    of VARCHAR(50),
    both DATE,
    PRIMARY KEY (of),
    FOREIGN KEY (of) REFERENCES city(of)
);

CREATE TABLE city (
    model DATE,
    west TEXT,
    poor VARCHAR(50),
    PRIMARY KEY (model),
    FOREIGN KEY (model) REFERENCES money(model)
);

CREATE TABLE money (
    life VARCHAR(50),
    son DATE,
    PRIMARY KEY (life),
    FOREIGN KEY (life) REFERENCES strategy(life)
);
