erDiagram
    strategy ||--o{ ever : important
    strategy {
        DATE important
        TEXT million
        VARCHAR(50) tend
    }
    ever ||--o{ modern : area
    ever {
        VARCHAR(50) area
        DATE reduce
    }
    modern ||--o{ respond : soldier
    modern {
        DATE soldier
        TEXT democratic
        VARCHAR(50) voice
    }
    respond ||--o{ positive : possible
    respond {
        VARCHAR(50) possible
        DATE mother
    }
    positive ||--o{ now : half
    positive {
        DATE half
        TEXT hotel
        VARCHAR(50) learn
    }
    now ||--o{ Republican : threat
    now {
        VARCHAR(50) threat
        DATE state
    }
    Republican ||--o{ wear : nearly
    Republican {
        DATE nearly
        TEXT stock
        VARCHAR(50) chair
    }
    wear ||--o{ city : of
    wear {
        VARCHAR(50) of
        DATE both
    }
    city ||--o{ money : model
    city {
        DATE model
        TEXT west
        VARCHAR(50) poor
    }
    money ||--o{ strategy : life
    money {
        VARCHAR(50) life
        DATE son
    }